--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
 <h3>User</h3>
 <p>Name: <%= @user.email if @user.email %></p>
 
-<p>Location: <%= @user.location.area_id.name  %></p>
+<p>Location: <%=link_to @user.location.name, @user.location  %></p>
