--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h3>User</h3>
 <p>Name: <%= @user.email if @user.email %></p>
 
-<p>Location: <%= @user.location.name  %></p>
-<p>City: <%= @user.city.name  %></p>
-<p>Area: <%= @user.area.name  %></p>
+<p>Location: <%= link_to @user.location.name, @user.location  %></p>
+<p>City: <%= link_to @user.city.name, @user.city %></p>
+<p>Area: <%= link_to @user.area.name, @user.area  %></p>
